src/objects/Glxy_LeaseDigest__c.object
<CustomObject>
    <description>Lease Digest object, child of Transaction object for galaxy</description>
    <fields>
        <fullName>AcceptanceDT__c</fullName>
        <label>Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccrualAmountForDigest__c</fullName>
        <label>Accrual Amount For Digest</label>
        <summarizedField>Glxy_LeaseAccrual__c.Accrual_Amount__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseAccrual__c.LeaseDigest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Agreement_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreement Sq Ft</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Rent__c</fullName>
        <label>Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_DT__c</fullName>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_of_Accruals__c</fullName>
        <label>Count of Accruals</label>
        <summaryForeignKey>Glxy_LeaseAccrual__c.LeaseDigest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DigestID__c</fullName>
        <externalId>true</externalId>
        <label>Digest ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Digest_Approval_DT__c</fullName>
        <label>Digest Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digest_Effective_DT__c</fullName>
        <inlineHelpText>The Actual Effective Date of the Action executed by the digest. (Can be Retro Active)</inlineHelpText>
        <label>Digest Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digest_Num__c</fullName>
        <inlineHelpText>Assigned by REXUS once Lease Digest action (R620) processed.</inlineHelpText>
        <label>Digest Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Amount__c</fullName>
        <label>IA Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IA_NOA_Conversion_Date__c</fullName>
        <label>IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IA_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Sq Ft</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_Accrual__c</fullName>
        <inlineHelpText>Indicator box that is selected when referencing an accrual associated with the digest action.</inlineHelpText>
        <label>Include Accrual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Interest_Ind__c</fullName>
        <label>Include Interest Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Due_IF_Paid_After__c</fullName>
        <label>Interest Due (if paid after)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Action__c</fullName>
        <label>Lease Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent__c</fullName>
        <formula>Annual_Rent__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOA_Amount__c</fullName>
        <label>NOA Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOA_SQFT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOA Sq Ft</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDNsForDigest__c</fullName>
        <label>PDN&apos;s for Digest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R620Link2__c</fullName>
        <label>R620Link2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>R620Link__c</fullName>
        <label>R620Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>R620__c</fullName>
        <formula>HYPERLINK(&quot;http://&quot;&amp;(RIGHT( R620Link__c,(LEN(R620Link__c)-FIND(&quot;://&quot;,R620Link__c)-2))&amp; R620Link2__c ),&quot;Click here for R620&quot;)</formula>
        <inlineHelpText>Actual Digest Action in PDF format that is uploaded into REXUS and linked to G2.</inlineHelpText>
        <label>R620</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLA_Num__c</fullName>
        <label>SLA Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Funding_CD__c</fullName>
        <label>Special Funding Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Glxy_Transaction__c</referenceTo>
        <relationshipLabel>Lease Digests</relationshipLabel>
        <relationshipName>Lease_Digests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Urgent_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Void_Digest_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void Digest</label>
        <type>Checkbox</type>
    </fields>
    <label>Lease Digest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lease Digest ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Digests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Acceptance_Date_on_Include_Interest</fullName>
        <active>true</active>
        <description>System shall validate that if ‘Include Interest’ has a value of ‘Yes’, a value is returned for the Acceptance Date and the system shall confirm that the Acceptance Date is less than or equal to the Date and Time of the audit information returned by system</description>
        <errorConditionFormula>AND(ISPICKVAL(Include_Interest_Ind__c, &quot;YES&quot;),OR( ISBLANK(AcceptanceDT__c), AcceptanceDT__c&gt;NOW()),$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>The Lease Digest Acceptance Date cannot be NULL or Greater than current Date/Time when Include Interest is set to YES.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Acceptance_Date_on_Include_interest_NO</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Include_Interest_Ind__c ,&quot;NO&quot;),NOT(ISBLANK( AcceptanceDT__c )),$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>Acceptance Date must be NULL when Include interest is set to NO.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ISF_Less_than_Agreement_RSF</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(IA_RSF__c&lt;0,IA_RSF__c &gt; Agreement_RSF__c),$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>IA RSF Must be greater than 0 and  less than or equal to Lease Agreement RSF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Included_Interest_NOT_NULL</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL( Include_Interest_Ind__c , &quot;YES&quot;),ISPICKVAL( Include_Interest_Ind__c , &quot;NO&quot;)))</errorConditionFormula>
        <errorMessage>Include Interest Indicator cannot be NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoChange_on_Accrual_on_NO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Include_Accrual__c) ,ISPICKVAL(PRIORVALUE(Include_Accrual__c), &apos;NO&apos;) )</errorConditionFormula>
        <errorMessage>You cannot change Include Accrual value from &apos;NO&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_if_Urgent_on_Suspend_off</fullName>
        <active>true</active>
        <description>Verifies that if IUgent is set to True, suspend must be false.</description>
        <errorConditionFormula>AND(ISCHANGED(Urgent_Ind__c), Suspend_Ind__c =True, $User.Alias &lt;&gt; &quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>Urgent Indicator cannot be changed if Suspend Flag is True.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_no_existing_Accruals_on_No_value</fullName>
        <active>true</active>
        <description>Check that if Include Accrual is set to no, no accrual child records exist</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(Include_Accrual__c ,&quot;NO&quot;),ISPICKVAL(Include_Accrual__c ,&quot;&quot;)), Count_of_Accruals__c &gt;0,$User.Alias &lt;&gt;&quot;castiron&quot;)</errorConditionFormula>
        <errorMessage>Must remove existing Accrual records before setting this field to No or blank.</errorMessage>
    </validationRules>
</CustomObject>